# iot-edge-modbus

./: .dockerignore  .gitignore  CODEOWNERS  License.txt  ModbusSlave.cs  Program.cs  README.md  azure-pipelines.yml  deployment.json  edgeConfiguration.json  iot-edge-modbus-sample.json  iot-edge-modbus-template.json  iot-edge-modbus.json
Docker/linux-arm32/: Dockerfile  Dockerfile-auto
Docker/linux-x64/: Dockerfile  Dockerfile-auto
Docker/windows-nano/: Dockerfile  Dockerfile-auto
IoTEdgeModbus/Modules/: .editorconfig  .gitignore  Azure.IoT.Edge.sln  Azure.IoT.Edge.sln.DotSettings
IoTEdgeModbus/Modules/Azure.IoT.Edge.Modbus.Tests/: Azure.IoT.Edge.Modbus.Tests.csproj  DeviceConfigurationTests.cs  ModbusTCPSlaveSessionTests.cs
IoTEdgeModbus/Modules/Azure.IoT.Edge.Modbus.Tests/Data/: ByteSwapperTests.cs  DiscreteBoolDecoderTests.cs  FloatDecoderTests.cs  Int16DecoderTests.cs  Int32DecoderTests.cs
IoTEdgeModbus/Modules/Azure.IoT.Edge.Modbus.Tests/MockData/: ConfigBuilder.cs  ExposedModbusTCPSlaveSession.cs  FloatReadOperationWithResponse.json  InputReadOperationWithResponse.json  Int32ReadOperationWithResponse.json  IntReadOperationWithResponse.json
IoTEdgeModbus/Modules/Azure.IoT.Edge.Modules/: Azure.IoT.Edge.Modules.iotedgeproj  deployment.template.json
IoTEdgeModbus/Modules/AzureIoTEdgeModbus/: .editorconfig  AzureIoTEdgeModbus.csproj  AzureIoTEdgeModbus.ruleset  ComWrapper.c  ComWrapper.cs  ComWrapper.h  Constants.cs  Dockerfile.amd64  Dockerfile.amd64.cicd  Dockerfile.amd64.debug  Dockerfile.arm32v7  Dockerfile.windows-amd64  Dockerfile.windows-arm32v7  Extensions.cs  IEdgeModule.cs  ModbusModule.cs  Module.json  Program.cs  iot-edge-modbus.json
IoTEdgeModbus/Modules/AzureIoTEdgeModbus/Configuration/: ConfigValidators.cs  DeviceConfiguration.cs  DeviceTwinConfiguration.cs  FileConfiguration.cs  IDeviceConfiguration.cs
IoTEdgeModbus/Modules/AzureIoTEdgeModbus/Instrumentation/: Event.cs  EventLog.cs  MicrosoftExtensionsLog.cs
IoTEdgeModbus/Modules/AzureIoTEdgeModbus/SerialDevice/: ISerialDevice.cs  SerialDeviceFactory.cs  UnixSerialDevice.cs  WinSerialDevice.cs
IoTEdgeModbus/Modules/AzureIoTEdgeModbus/Slave/: BaseModbusSlaveConfig.cs  BaseReadOperation.cs  ConnectionType.cs  EntityType.cs  FunctionCode.cs  FunctionCodeType.cs  ISessionsHandle.cs  ModbusComplexValues.cs  ModbusComplexValuesHandler.cs  ModbusFloatHandler.cs  ModbusInMessage.cs  ModbusOperation.cs  ModbusOutContent.cs  ModbusOutData.cs  ModbusOutMessage.cs  ModbusOutMessageV1.cs  ModbusOutValue.cs  ModbusRTUSlaveSession.cs  ModbusSlaveConfig.cs  ModbusSlaveSession.cs  ModbusTCPSlaveSession.cs  ModbusValueTypes.cs  ModbusVersion.cs  ModuleConfig.cs  ModuleTwinProperties.cs  ReadOperation.cs  SessionsHandle.cs  WriteOperation.cs
IoTEdgeModbus/Modules/AzureIoTEdgeModbus/Slave/Data/: ModbusDataType.cs  SwapMode.cs
IoTEdgeModbus/Modules/AzureIoTEdgeModbus/Slave/Decoding/: ByteSwapper.cs  DataDecoderFactory.cs  DecodedModbusValue.cs  DecodedValue.cs  DiscreteBoolDecoder.cs  FloatDecoder.cs  IModbusDataDecoder.cs  Int16Decoder.cs  Int32Decoder.cs  ValueDecoderBase.cs
IoTEdgeModbus/Modules/AzureIoTEdgeModbus/Wrappers/: IModuleClient.cs  ModuleClientWrapper.cs
V1/: License.txt
V1/doc/: devbox_setup.md  sample_modbus.md
V1/modules/modbus_read/src/: modbus_read.c
V1/samples/: CMakeLists.txt
V1/samples/modbus_sample/: CMakeLists.txt
V1/samples/modbus_sample/src/: main.c  modbus_win.json
doc/: devbox_setup.md  sample_modbus.md
iotedgeModbus/: deployment.template.json
iotedgeModbus/modules/iotedgeModbus/: .gitignore  ComWrapper.cs  Dockerfile.amd64  Dockerfile.amd64.debug  Dockerfile.arm32v7  Dockerfile.windows-amd64  Dockerfile.windows-arm32v7  ModbusSlave.cs  Program.cs  SerialDevice.cs  amd64.dockerfile  arm32v7.dockerfile  arm64v8.dockerfile  comWrapper.h  iotedgeModbus.csproj  module.json  windows-amd64.dockerfile
modules/: CMakeLists.txt
modules/modbus_read/: CMakeLists.txt  README.md
modules/modbus_read/devdoc/: modbus_read.md  modbus_read_hl.md
modules/modbus_read/inc/: modbus_read.h  modbus_read_common.h  modbus_read_hl.h
modules/modbus_read/src/: modbus_read.c  modbus_read_hl.c
modules/modbus_read/tests/: CMakeLists.txt
modules/modbus_read/tests/modbus_read_hl_unittests/: CMakeLists.txt  main.c  modbus_read_hl_unittests.cpp
modules/modbus_read/tests/modbus_read_unittests/: CMakeLists.txt  modbus_read_unittests.cpp
modules/modbus_read/tests/modbus_read_ut/: main.c  modbus_read_ut.cpp
samples/: CMakeLists.txt
samples/modbus/: CMakeLists.txt  README.md
samples/modbus/src/: main.c  modbus_lin.json  modbus_win.json
samples/modbus_sample/: CMakeLists.txt
samples/modbus_sample/src/: modbus_lin.json  modbus_win.json
src/: ComWrapper.cs  ModbusSlave.cs  Program.cs  SerialDevice.cs  comWrapper.c  iot-edge-modbus.csproj
v1/: README.md
v1/modules/modbus_read/devdoc/: modbus_read.md
v1/modules/modbus_read/inc/: modbus_read_common.h
v1/modules/modbus_read/src/: modbus_read.c
v1/modules/modbus_read/tests/modbus_read_ut/: CMakeLists.txt  modbus_read_ut.cpp
v1/samples/modbus_sample/src/: modbus_lin.json
